--- a/toolz_web/templates/layouts/base.html
+++ b/toolz_web/templates/layouts/base.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
     <title>
         {% block title %}
-            My app | {% block jsondash_title %}{% endblock %}
+        My app | {% block jsondash_title %}{% endblock %}
         {% endblock %}
     </title>
     <!-- VENDOR CSS -->
@@ -12,26 +16,53 @@
     {% block jsondash_css %}{% endblock %}
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="well text-center">
-                    <h4><strong>ToolZ品牌工具</strong> <br><small>电商狗，竞品分析</small></h4>
-                </div>
-                {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        {% for category, message in get_flashed_messages(with_categories=True) %}
-                            <div class="alert alert-{{ 'danger' if category == 'error' else 'info' }}">
-                                <p class="flash">{{ 'Error: ' if category == 'error' else '' }}{{ message }}</p>
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                {% endwith %}
-                {% block jsondash_body %}{% endblock %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="well text-center">
+                <h4><strong>ToolZ品牌工具</strong> <br>
+                    <small>电商狗，竞品分析</small>
+                </h4>
             </div>
+
+            <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+                <!-- Brand -->
+                <a class="navbar-brand" href="/charts/">主页</a>
+
+                <!-- Links -->
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://0.0.0.0:1234">查看抓取数据</a>
+                    </li>
+
+                    <!-- Dropdown -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Dropdown link
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for category, message in get_flashed_messages(with_categories=True) %}
+            <div class="alert alert-{{ 'danger' if category == 'error' else 'info' }}">
+                <p class="flash">{{ 'Error: ' if category == 'error' else '' }}{{ message }}</p>
+            </div>
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+            {% block jsondash_body %}{% endblock %}
         </div>
     </div>
-    <!-- VENDOR JS -->
+</div>
+<!-- VENDOR JS -->
 <script src="{{ url_for('static', filename='js/vendor/jquery.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/vendor/bootstrap.min.js') }}"></script>
 {% block jsondash_scripts %}{% endblock %}
@@ -39,9 +70,9 @@
 {% block jsondash_api_scripts %}
 {#
 <script>
-    $(document).ready(function(){
-        if(!window.jsondash) return;
-        jsondash.api.registerCallback('chart-id-here', function(container, config, myargs){
+    $(document).ready(function () {
+        if (!window.jsondash) return;
+        jsondash.api.registerCallback('chart-id-here', function (container, config, myargs) {
         }, ['Hello world']);
     });
 </script>
